// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card demo -- card 1`] = `
.c2 {
  line-height: 28px;
  font-weight: bold;
  padding: 0 16px;
  margin-top: 12px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c4 {
  display: block;
  line-height: 22px;
  font-weight: normal;
}

.c6 {
  line-height: 28px;
  padding: 0 16px;
  margin-top: 12px;
}

.c6:before,
.c6:after {
  content: ' ';
  display: table;
}

.c6:after {
  clear: both;
}

.c9 {
  min-height: 30px;
  padding: 0 16px;
  margin-top: 12px;
}

.c11 {
  line-height: 1;
  padding: 0 16px;
  margin-top: 12px;
  padding-top: 12px;
}

.c11:before,
.c11:after {
  content: ' ';
  display: table;
}

.c11:after {
  clear: both;
}

.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  text-align: left;
  border: 1px solid #e1e6f0;
  background: #fff;
  font-size: 12px;
  color: #6b798e;
}

.c0 .c1:last-child,
.c0 .c5:last-child,
.c0 .c8:last-child,
.c0 .c10:last-child {
  margin-bottom: 12px;
}

.c0 .c1 {
  color: #0a1633;
  font-size: 14px;
}

.c0 .c3 {
  color: #c3cad9;
  font-size: 12px;
}

.c0 .c10 {
  border-top: 1px solid #e1e6f0;
}

.c7 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c7:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <div>
      This is the title
    </div>
    <div
      class="c3 c4"
    >
      This is the comment
    </div>
  </div>
  <div
    class="c5 c6"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c7"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c7"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="c8 c9"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px;"
    >
      This is the content
    </div>
  </div>
  <div
    class="c10 c11"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c7"
      style="float:right;"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;

exports[`Card demo -- custom 1`] = `
.c7 {
  line-height: 28px;
  font-weight: bold;
  padding: 0 16px;
  margin-top: 12px;
}

.c7:before,
.c7:after {
  content: ' ';
  display: table;
}

.c7:after {
  clear: both;
}

.c9 {
  display: block;
  line-height: 22px;
  font-weight: normal;
}

.c4 {
  line-height: 28px;
  padding: 0 16px;
  margin-top: 12px;
}

.c4:before,
.c4:after {
  content: ' ';
  display: table;
}

.c4:after {
  clear: both;
}

.c2 {
  min-height: 30px;
  padding: 0 16px;
  margin-top: 12px;
}

.c11 {
  line-height: 1;
  padding: 0 16px;
  margin-top: 12px;
  padding-top: 12px;
}

.c11:before,
.c11:after {
  content: ' ';
  display: table;
}

.c11:after {
  clear: both;
}

.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  text-align: left;
  border: 1px solid #e1e6f0;
  background: #fff;
  font-size: 12px;
  color: #6b798e;
}

.c0 .c6:last-child,
.c0 .c3:last-child,
.c0 .c1:last-child,
.c0 .c10:last-child {
  margin-bottom: 12px;
}

.c0 .c6 {
  color: #0a1633;
  font-size: 14px;
}

.c0 .c8 {
  color: #c3cad9;
  font-size: 12px;
}

.c0 .c10 {
  border-top: 1px solid #e1e6f0;
}

.c5 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c5:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px;"
    >
      This is the content
    </div>
  </div>
  <div
    class="c3 c4"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="c6 c7"
  >
    <div>
      This is the title
    </div>
    <div
      class="c8 c9"
    >
      This is the comment
    </div>
  </div>
  <div
    class="c10 c11"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c5"
      style="float:right;"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;
